@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020130908"
-#define public MagickPackageReleaseDate "snapshot-20130908"
+#define public MagickPackageVersionAddendum ".020130916"
+#define public MagickPackageReleaseDate "snapshot-20130916"
