@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2013-09-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/profile.c (MagickFreeCMSTransform): Only delete the CMS
+transform if it is non-null.  If lcms returned a null transform,
+an assertion was thrown in lcms when the pointer was freed.
+Problem was reported by James Bardin.</li>
+</ul>
+</blockquote>
 <p>2013-09-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
